--- a/src/ui/footer/footer.module.css
+++ b/src/ui/footer/footer.module.css
@@ -9,7 +9,7 @@
 .footerContainer {
   max-width: var(--max-width);
   margin: 0 auto;
-  padding: 2rem 1rem;
+  padding: 2rem 1rem 6rem 1rem;
 
   display: flex;
   flex-wrap: wrap;
